--- a/clusters/main/clusterenv.yaml
+++ b/clusters/main/clusterenv.yaml
@@ -1,65 +1,66 @@
-#ENC[AES256_GCM,data:XUxyFG62oBA4hGnl,iv:oqywe9ZTtqEbjrDsYsl19X2X7+T18nolugIp9EBeq3A=,tag:6/2lIXT9dzg/l1isK5e/Pw==,type:comment]
-PROXMOX_IP: ENC[AES256_GCM,data:GhgAm0cHAFcCt4E=,iv:YkWyOeX4B4hCQ3wc4RJM+yEKFFVDqADlh86HROFXfzM=,tag:WSS+OkYjPaVIuXevdRHexA==,type:str]
-VIP: ENC[AES256_GCM,data:k4Cl8Qe6pU1X34k=,iv:cnycjRiLy+4gMkg1ruedwGDMdlW2DYtmNOvn2bniiug=,tag:uIQ4ujtfdM5AU4M9lbmwAA==,type:str]
-MASTER1IP: ENC[AES256_GCM,data:xyxsg82ki9QFHIQ=,iv:GqSt7P/dIQZcwMs9zHX/+fngWC/RCFhuhmxO8tqMpzE=,tag:rBAuJjkJ/g/9IIamvs1vLA==,type:str]
-GATEWAY: ENC[AES256_GCM,data:aMHpXbWnMGaU3Q==,iv:goqqqvMh5V966U2J7EmEM25g2ytQ/hybs8rq/Jy6iQ8=,tag:LAVEnxeShuA4W94y1/f1kg==,type:str]
-#ENC[AES256_GCM,data:FWUhNTlvgboU1uhRowA8,iv:0S6+IJTf4RSGkTiEWXkqb5WcOXGAEy9CJwQwdh+IrG0=,tag:IeDJ8wUdG8PZUhrKzbRbGQ==,type:comment]
-METALLB_RANGE: ENC[AES256_GCM,data:avhJsoQWcT8BBwDGkQYOctV7CwHPJX1bvA==,iv:/JiWqJPU8jfPQFTQoRYh7pHeHEa2ngRxYMHjR7ZMmwQ=,tag:8gnmEOWapQOhWdZi3fdVRg==,type:str]
-#ENC[AES256_GCM,data:vFmXHzeyr2HPgKLaesWpAtAKgFM6naQT1w==,iv:45Jaiug8tfdi3Eyd3ey9n4B6Q2IRigA/AMM/imaVTro=,tag:qVwikpl3XaHeteFC/fmm+g==,type:comment]
-NGINX_INTERNAL_IP: ENC[AES256_GCM,data:6ZfiR5igth6G8gPK,iv:1dj/aDWXXLGAtZkXvXG+e4tJV+uykwV2V1eqHnXgq7M=,tag:zN9w7P8jOkEk4IWkEXMRjw==,type:str]
-NGINX_EXTERNAL_IP: ENC[AES256_GCM,data:DdLQ1UdHLjgISJb3,iv:iFb1dLNO6+eCXduomIUNpcJewx6Z5DOcCRCOPVcIAZc=,tag:6aUb/OmACMVHpWGpFAjCrg==,type:str]
-IP_WHITELIST: ENC[AES256_GCM,data:Mg0GZPqJTNn3mEYbtML78A/21XMTE/jn7rQ=,iv:gLqN2EERanhBYN8ofqfCqOaa4Mk9y1ysd1WnyXhqaTY=,tag:xEcIUXGGlOH1T50+5ERW8A==,type:str]
-BLOCKY_IP: ENC[AES256_GCM,data:qLNoWooLB8MoMZtS,iv:3qV1ZmLZH2W/j4l+kUXfCd7TLdx9FLLKfGQc+LnPuLs=,tag:WhwlW+0DpZ0itHTMQ3gAmQ==,type:str]
-DASHBOARD_IP: ENC[AES256_GCM,data:y/tzlNXAB9T0qDkv,iv:tSYfLVCriaE1TzhhfUVT+QWycF+AyIqC2p/fBkiUGqQ=,tag:T7KmHRQlT8RLxWP0q/iOww==,type:str]
-WG_EASY_IP: ENC[AES256_GCM,data:O8EexAYdQJdpY2xd,iv:/1QMGFLShy1yhR+MEuOo/wB1MAqyvVlqxbiC5Y96eGc=,tag:sO2nIYG8pkpNhWJt4H4u/Q==,type:str]
-MINECRAFT_IP: ENC[AES256_GCM,data:qJ3xsq9ueKmG6gL3,iv:Pd2FiTI1LdigM0Mxl8aJID5OaNM5HqfOj6iJpKHK7tE=,tag:RaFsfGpIP0xLqIIH4JQrNQ==,type:str]
-#ENC[AES256_GCM,data:+J9jwQeDCzrgepcL5hBGacht,iv:QzoL4mHo6R5vx15uuE7ZypfNddaNnge8w072bMjZF/0=,tag:c12mZt2YaHxFY/Gl6FCvog==,type:comment]
-BOREALIS_IP: ENC[AES256_GCM,data:PKmHZH7MoMuzj80=,iv:hUSyTZOcdKbHXs59g3Z/7x2hbwuyx8G0fyZtTC7iwOM=,tag:5KT5w0ikHevk7kUDTZWdLw==,type:str]
-#ENC[AES256_GCM,data:j8IIzGth9wcl+FsD4wM5fg==,iv:IUcODQpNGd6eMqc3eI2o37fLPKNo+OTmeNI+AP31qOc=,tag:hXYXehkcvvJ0SqZpiE20/g==,type:comment]
-DOMAIN_0: ENC[AES256_GCM,data:TRkprrkR9p9fUBif1Q==,iv:zNOseUwHzaELWQzqrYyZaUuHdpw6iL3EtTWugBeLdG4=,tag:mrphs162uj14wauAgZTrAA==,type:str]
-DDNS_URL: ENC[AES256_GCM,data:ffhYYvU3fQP5JWYAC/jRNR7e+yY=,iv:siaZSLsk1uptx9YY7oAyNl2Y4YzVUUBBe49lDLr1pyo=,tag:a/JvSQ3uu4CKMxki/oiqZA==,type:str]
-DOMAIN_0_EMAIL: ENC[AES256_GCM,data:hVQwh9LvUGxpAUUP3G1hgfNr7g==,iv:PclKD2PwV8gsmdDUgs3kNiPzxiFzX0lPPjIwGrDD/Bo=,tag:KvJgJU2WfPPJct+zlMbixw==,type:str]
-DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:cKMnpyaAh9JPjUhSuKfaZW5oijzMRra+FbrRzTrzj24kMUOxgrjNtA==,iv:A6mr0F3H2VYyGuX6H70shplINIhhTXkUkz9hx+NLYbU=,tag:Wpjf8UQ7k0Zge7v3i9tUqw==,type:str]
-ZONE_ID: ENC[AES256_GCM,data:E1X6D47TgCRPvPzFpjp8XrKCTrBQIvfIR01xIPS3wEo=,iv:54vbtjcs3/tgF2ZWpAsvi3SyLQOKYzXnig2V02CJTQo=,tag:hEoiNHaX3BCrr/uvQI+MWA==,type:str]
-#ENC[AES256_GCM,data:cwHkn3KUEEE=,iv:JsNCj1LoQJGnhUniPoyMGjBUTHm+uPFBXpTY5eV1PM0=,tag:9n6q+wo0DYW8biHoXipzlw==,type:comment]
-GF_ADMIN: ENC[AES256_GCM,data:dSIL7uQwPuwF,iv:/MCF9NFTrHwoVBV7hYSOO6z8Tkl46LwJvh1cQDF3MW4=,tag:+YpCnpxjIx3rgz7k19N16w==,type:str]
-GF_PWD: ENC[AES256_GCM,data:q3vwcSVXphIAUQ4S/Q4Nukct27Cr0int,iv:wpTzWcaJ0Og7GOIUOIZ0M4LwG1elshfgGHpeFvCZbe8=,tag:h8kJbQbctklBKkiVK8Kt2A==,type:str]
-#ENC[AES256_GCM,data:kVwnBG1Fur5mqw==,iv:G5yO9oiy+JK/I5SPw1xCPLmWKj/5qGO0IdVxM1ZlDbc=,tag:mwYXLEbvlCmOwxs0KNfHCg==,type:comment]
-NEXTCLOUD_USER: ENC[AES256_GCM,data:6+88RaV8TTNd,iv:G5RReB48rzfI1xt1/HMFor0PfK98KHWujWtuH9i+1Tk=,tag:CxLPNb0V9blx6glMcmJ3AA==,type:str]
-NEXTCLOUD_PASSWORD: ENC[AES256_GCM,data:EVrfeAH5XmoT5pQlAYe2A/14g+0=,iv:5SHLoOvZZsD1e0wZKqYDoMQtNeCjA4lYmefFEJE8HuA=,tag:3HlRwseNk8N8Y19XzjDt2A==,type:str]
-NEXTCLOUD_NFS_PATH: ENC[AES256_GCM,data:ERiSlMRPRXbSZwDqovSwoO0ffEbYi4zO,iv:Zlh3XHGv1L+S8XmB+yVS7VkxZnRWBE6SJ403xVsTXS8=,tag:/RRTYdOm6sqPwW2frYgDwA==,type:str]
-MINECRAFT_NFS_PATH: ENC[AES256_GCM,data:Tu0Etc1EAU3tyDWC0bxA1QnXSQ==,iv:m8n9AxseDqVLDEj9DHricTNqkQPhzESyJvBexDfa5IQ=,tag:x8hn3pSTlO8txw6JOp9ZXA==,type:str]
-SPOOLMAN_DATA_PATH: ENC[AES256_GCM,data:QcEeaDyJTneBQsgd0OUoybAr,iv:L6gFmhBWg9czUhCX0wPYwVge/1HvOCPeHl0j+1KsJUI=,tag:f4Nndt/cHDCUAG9iK3PVjw==,type:str]
-SPOOLMAN_LOGS_PATH: ENC[AES256_GCM,data:Se2UveftMAS/MRcvKz3qeozPSIfsG7c=,iv:gfTo1W9uF8qEW6F4rz+1jo+DGqoWZLNCt+U38Vd2PCM=,tag:03WlNywMCGRImcfNYgdTHQ==,type:str]
-HOMEASSISTANT_NFS_PATH: ENC[AES256_GCM,data:AZPn3vRRkZU/lxQVLXWOeXZ9/TvpYHLY,iv:IR4v1mcY3z2npDWDba1wriePp7DHktbNljhUJ0p/a0o=,tag:D2HlJZg2JoKe47v8pzPdcA==,type:str]
-SEARXNG_NFS_PATH: ENC[AES256_GCM,data:7EfXLfYgKjHjK5hTrJb+8+XygJcEWLeQ,iv:tYACDJDtMXZuvCDKR8vonHQ4GPrHPFJ/RmeQr+pHNIg=,tag:oKPbZFRZGq5jz68wjc9QaQ==,type:str]
-#ENC[AES256_GCM,data:OZ94eYiZFNDniTSHSdjTuGo=,iv:LK6cStM8xbYaGoxvOX7Q67woBAOyeH4z1fogEik2+qQ=,tag:WGNqajR86OxIKg6O3YNYGA==,type:comment]
-METUBE_NFS_PATH: ENC[AES256_GCM,data:SkDUm/gsgh4tcBv58RcW+AbdKHtCeUOQyqc=,iv:BnzHEUWmrL1YF2srso4akQGG/yAr6Tn8Go2HjV6X5Fo=,tag:R8B/Dj7BY4MgIsD9nEbSig==,type:str]
-VIMINARIACOM_NFS_PATH: ENC[AES256_GCM,data:BADEgviza/z2i23YwT0gpCeYnqjronwC/+VAfBGXgUqdtUuUfJyX,iv:VkhP6glZ09YGKRjJ/BBst632ics2nG83tt+L9T6Jv44=,tag:wev3I2fuIq6jcSHWXmMlRg==,type:str]
-OZRATES_NFS_PATH: ENC[AES256_GCM,data:yNWVyrFmHTE/VRauXoGMcn5KrLnS4+wve4sm3OA=,iv:U/64T5DkljM4RScm6oubO0i3kqj9kmijAy7wKYqVYqE=,tag:XcO4ATSSmV4om2y6/0r9Pg==,type:str]
-#ENC[AES256_GCM,data:HD7pzT7Z/rUMh/79iMjP2NcgUlnGYgv0MuC9EjBmhHS4sVtMFLhLho6UzgIixuL02BJclnv59jU=,iv:RqEBYW7oFuXnHuK1PeJnETA40X8Gi0wrSVaRcriXd3s=,tag:DwCFRRvQpBqmMVRi8XKCpg==,type:comment]
-#ENC[AES256_GCM,data:lXJNusGc8bp+YkfQE+iXNKymrxeM1Jgk8A==,iv:l+0bugRlXEio9+SnpFDRGC1ef774ZdVHZZLoKwIB8qY=,tag:VHkogxWOqZvLT9fikTTwnA==,type:comment]
-#ENC[AES256_GCM,data:+y9TlSjNhXeKlrP65yfL6V1notcnJiIs35x3MTfU0B+e26EDHMQ+BQogVgBePf3aST7WAJL7TNcS3+1aJyeuhkBUpjzYuX3M8EZymYA=,iv:YXvJ9ll4nYGs7Ro9aDAfqhcqkDE0zMEb0i3hnPjZj3Y=,tag:6w2NUCmW6iBAT6JgwlUdYw==,type:comment]
-GITHUB_REPOSITORY: ENC[AES256_GCM,data:6ILKip9C21+t8Ugk3zVhZD33C4qigblSmdQjZo0rEcVgOaG4p472aU8nxg==,iv:DYX/MzyqIhZYn7UtPGHlJ2HaYv9KW54Yo8CVKiNoEI4=,tag:vnue8COR/VeI4WnvgCQ3Qg==,type:str]
-#ENC[AES256_GCM,data:An1Rwt6xM0iBPrLJiIFbyYbtKQrO7Z1wPEw8qw71PJT8UFcMW3MzaHpW0Tl83wid8ZPwfRRtMj7tJTfu4aoYXKXj0yOkRks=,iv:TXjtL9wMVYJuvo0sLf0v+2EG3ZmqzQRGTw6apP6rU3Y=,tag:7bS0XZ9fAE4J7XJWdW5SBw==,type:comment]
-#ENC[AES256_GCM,data:xC0Byv/vc/zBiFVkHc4Bzfavfo5rGEPitXBXVrGu83nCoIHmDpx8Gbd0HUMvxOScDTsJqBGr,iv:hSwM9I9a5J79e2hnrKAQ8YMHw5/WQRWtmoX+wTPnUmE=,tag:Zd6rDGN4H6PUvz3gSMTQhg==,type:comment]
-#ENC[AES256_GCM,data:GHwg22ESvjm5AWhh1J4IdyKQhKNNFskTHhjLAN1+bd858UE=,iv:Yghx3oSp7l2/QvziMErW+nqSWS/PGF2/XoxaluSDJkY=,tag:FPuAxcLW8fJ8UJ9xhVyUFA==,type:comment]
-#ENC[AES256_GCM,data:fQwvT9cw6cA91ttT+ERZWb2ygGdBc0Ez5gYYI1dtZgUTM97SsGQp,iv:3LNHMO7Kf83zj7MbnMfdjoGO62HxkJQ7WZbeXzk/6CA=,tag:ohL0hwFvpKBnAuugpBX5tA==,type:comment]
-#ENC[AES256_GCM,data:Z1SPW7IfO5nURLAJyC8=,iv:9cGrQH83cq3up4MD6CYD+RUXMY0TnJdF7viavPSLSiQ=,tag:FmghxMesHav7gAHNvQwE9Q==,type:comment]
-PODNET: ENC[AES256_GCM,data:nylkqXnw0H3rH7WGUQ==,iv:RjFFrg3BRyF/2qNnBHDtVu/pME9rdF3Ro5hWKiLN0Ro=,tag:afCMydj9xm1hpY5hJkKRGQ==,type:str]
-SVCNET: ENC[AES256_GCM,data:FhHPfweA6f+cMiOG0Q==,iv:xdwHKK6dam9CPsSB9EEOCLGxzhDP6fB6hkiBx3Vau8o=,tag:ZuZ7kSPLFDx+e++VumKhLg==,type:str]
+#ENC[AES256_GCM,data:1gtTf9bt37RgF6CA,iv:aLN3eK88cnEQt4jHPMnLnMEfHvbb+pTiL2zmN0niAu4=,tag:PEtDdG5Ty2VEbQJZX0Z4/A==,type:comment]
+PROXMOX_IP: ENC[AES256_GCM,data:Sjmk3XmligfrIlo=,iv:gkg0mpEFFtAsrzx1kMLr1lvI0IDlLJ426QNhjjjIm6k=,tag:GXWH0i6J0wNDk0+q+EFt9A==,type:str]
+VIP: ENC[AES256_GCM,data:NGyWABl9FalsB+0=,iv:nn4LNHY1nCic5iGF49JwT1KLM19Xi3NDlzV6SjN0u58=,tag:nyMeraKiVcjDKzyNgoFYhA==,type:str]
+MASTER1IP: ENC[AES256_GCM,data:8yL6PgKTGLeblUI=,iv:9ovHHAm0/+LQvP8evZKLJaUjjkxgQpJHmEufOhDJzfc=,tag:0pk7033X5Julbi9cUDoTRw==,type:str]
+GATEWAY: ENC[AES256_GCM,data:nMpFz5kBb3V5JA==,iv:fyjVXl93z+eb+XXxRbq/JGx7ZTbF2hKsfNakAEYsX7k=,tag:100wQOh9h41TUAoAmg6+lQ==,type:str]
+#ENC[AES256_GCM,data:rgsH4V/smW4kkx2O0MG9,iv:YCKEPTqgbm5NamNFdE0YVzvw3mfLwRStjFG+fwKvLyk=,tag:mKOue0eI/H0qofGvFyECVg==,type:comment]
+METALLB_RANGE: ENC[AES256_GCM,data:rR23a0zZzTRxSI6XkRj4jXofd0cNjE6rSg==,iv:t3/2jpZUmJft9lXq/YWbns8j7alKjhudmtehwc4oUCE=,tag:5ZStgbjAIFmWaRu7Y7K3kg==,type:str]
+#ENC[AES256_GCM,data:WN+dqtKovTCtRtZvUZMzGwf+vYSGVqvk9Q==,iv:dk4A+jBPmSR7MJo/Xi7W69DAj9lpGvxEemR99duEEu8=,tag:TwSpaXVY8a29sXuJWD+b4A==,type:comment]
+NGINX_INTERNAL_IP: ENC[AES256_GCM,data:IO6zcnwmCuYaiW6/,iv:kjMIn+Q8aWSeYqkDnb+6iudARgid2eMIynqOX3aauig=,tag:c5D93XoZ/XQkjafuee8FDg==,type:str]
+NGINX_EXTERNAL_IP: ENC[AES256_GCM,data:dH0lv1RuxVLMxELo,iv:QOnnpuXRcukIu2MLENSkeCs8A09Mkm+Rn2IlZdaOTz8=,tag:pn42tQjehiMwmSD/M0WJpQ==,type:str]
+IP_WHITELIST: ENC[AES256_GCM,data:zpHJxZTygRca8jmgYwNgBkpYzOloBodmOOE=,iv:nEoKd2ru6naBNtuTmQ7Fa5Z1eTV0OSODx1Z31Mgqc0I=,tag:joYosWa5dHLElCTX7Dksrg==,type:str]
+BLOCKY_IP: ENC[AES256_GCM,data:EuSMSb22ENvPkVrU,iv:m38BEEhzxZj+JvQVvTBSd1S2s/WKGIzukxUIOiQ47f4=,tag:FRxeQlnmYz+jDhemZKKYtg==,type:str]
+DASHBOARD_IP: ENC[AES256_GCM,data:PKc2sCm6BYY66biI,iv:sDmrHrfuMnqNitlizKTsstsnQKLYZpeooA9MuGaxMC4=,tag:z6UYpMDFyp/4hXxhPwfNXw==,type:str]
+WG_EASY_IP: ENC[AES256_GCM,data:A11bie/6rXsPcEl2,iv:s+41+52pgiiSOdHo6Sea2DOG8K7hTWLhoTeVcBC9IN4=,tag:Cu36JJkf9HzxiEjEHTonqA==,type:str]
+MINECRAFT_IP: ENC[AES256_GCM,data:cZOMr4of/Dbsz/r6,iv:mYU46CVII1f5O1zOuG1SNPJ42SZXJLFugagcGqdjNyw=,tag:rNzO3T5HCl+Nbhyb3WFXhA==,type:str]
+#ENC[AES256_GCM,data:TN4P02cT87MOo8C+8iaZpLum,iv:+mlWLNSN/EwP/DCcpnUHRTtDxOxK7T/WXNTvdttUh6Y=,tag:moA7u4Xtz5xL9FFJaNJCJg==,type:comment]
+BOREALIS_IP: ENC[AES256_GCM,data:kSPxIZd9Nos1npI=,iv:lpoxW0cHoJE5pURLLSVQ74+VCjxl9lrohzjRgqkfBH0=,tag:OoqABxj6X4bAxV/+2jKRug==,type:str]
+#ENC[AES256_GCM,data:njp+iJqfJe+3NrHpIfcW+A==,iv:aQ7kg6bffHqEPViEgTPJVFJKpOMUJo5iTkNxvt05ejE=,tag:kdlCAE8InTgaoS9LPvwcCw==,type:comment]
+DOMAIN_0: ENC[AES256_GCM,data:cOV0IbWviVGZrqiucA==,iv:39n6G25iDxbKev7fMvR3lZPgja5FeglfPu0pTpFB55M=,tag:DxZ0HlMxERi0I5muft+VUQ==,type:str]
+DDNS_URL: ENC[AES256_GCM,data:wbuI/wBVEHFlRYwlvSUGK0wdqaU=,iv:zNUmtDH7kyc8FTt36UDAeFCq5Jo98eCoMAZWcF4amR4=,tag:PGXiBbSdnY1StEqrV1w1Dg==,type:str]
+DOMAIN_0_EMAIL: ENC[AES256_GCM,data:CnxK+HKn3FK9qT5OLA5F52+4lw==,iv:o29mxUQKtvhr9JlXjwOUT0TX4MnM6Ol55Hj+wHnPi74=,tag:AXiL3nBqm87vV/fWm4vLCg==,type:str]
+DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:Phcy+EpjGHLHMAFqjJaTGfwyc+gQun4lLGZQ7QOZCjSfYYDoHHJjNw==,iv:2bxlow/GWJD8/dfcPuE36JHrRZi2QdINWmaqmhDwiMQ=,tag:FKJ1XNrleb4ClTTEB4hLLQ==,type:str]
+ZONE_ID: ENC[AES256_GCM,data:fp4BFh1Gs7zl70sy+q4I43zQ2RrD1D+Jm8s6OWbnvgs=,iv:sqmJPQsLFPaaOjR3Nk76xw5bzG1yyp8LBaP3NJ4tatY=,tag:ImU0qhyHWr1uiydN3Qxspg==,type:str]
+#ENC[AES256_GCM,data:ozGrHYk+zn0=,iv:9Ix/Gweeu3UWu+4Zz612qF6qBFyz5eP6ClD4KOeCURE=,tag:3C23gcPhuUs2oiDThdw9OQ==,type:comment]
+GF_ADMIN: ENC[AES256_GCM,data:v7CA1G56BLoW,iv:xtge2ACILrILFm4Be+jDO7NoXFGCmMYPbz+VDLzuoas=,tag:noqfbIAEJGwUOBwcIOS9MA==,type:str]
+GF_PWD: ENC[AES256_GCM,data:6M3qWuJK4EIb9g2cqiCzzd8yDtU627yd,iv:BE7Tf/CHpcy7rKy2dDZYWQ5uYicFYyGpr70vC5oYnEo=,tag:YUrBd8sVUUJCHzpDJAlpNg==,type:str]
+#ENC[AES256_GCM,data:PZD+ESixMlCudA==,iv:yvEksvWzLVfSVVyN5U3TRB2ESW9s4u7YkhkEeDd+6W0=,tag:riNUkCEJk0562bynSq5a7Q==,type:comment]
+NEXTCLOUD_USER: ENC[AES256_GCM,data:gUKnl7s+ZEAA,iv:yLspF6DjJVk+QjbGrFWeOiKpWN0kL9GhzBkI29B56yg=,tag:Jnn/kSoECNCKyr+WdUIavg==,type:str]
+NEXTCLOUD_PASSWORD: ENC[AES256_GCM,data:+6Dm/xzaUHVEgT01wVy5I+sXJZE=,iv:Ee02DFs9RIKefyMTFPoY6ooImOXfuZfB9D44cd5ypNw=,tag:Ws3uvUe41LibpJgAl/WHag==,type:str]
+NEXTCLOUD_NFS_PATH: ENC[AES256_GCM,data:5ZRWcP41RXwBVWPfxchyn6tQoLsIcedj,iv:64SQByT/Haohm5mjDRR5+0ZBymEpajZIDxhiMC5GY+4=,tag:W4cSo/oQyze7mTE/sHtYUg==,type:str]
+MINECRAFT_NFS_PATH: ENC[AES256_GCM,data:gpqVuzm1RbmqoUpSc8s31Xwp9A==,iv:4Hs/pbmUsjAF0dP+L2XOb/mCAY1xeaPunaXvrNdc84s=,tag:mantPf8/kmGx7qewq0sySg==,type:str]
+SPOOLMAN_DATA_PATH: ENC[AES256_GCM,data:lvDw4sNQbS8jJFNcb2+HvEX7,iv:jxo+3OiZDkURVXQXxhYBa0t1GN7unIiGoR7zAnom0E4=,tag:E6A1T+Zi7tIRxRlPBaAzwA==,type:str]
+SPOOLMAN_LOGS_PATH: ENC[AES256_GCM,data:sQN0taTUiACMXZYxEHha7kzQdPkzKXg=,iv:iqqfPtSuprCU21Nqw51tItb19PY2zSQRG/Rxq9yxg6Y=,tag:q1s99vs99V/MlYkyPsp3yg==,type:str]
+HOMEASSISTANT_NFS_PATH: ENC[AES256_GCM,data:8haRdNQNE4mk67kVRfC+3RCsjBXTctTp,iv:gBspF8QrIw+KRbtZAWRCF8Dn61ogvbC3PAj0VRtNdTM=,tag:AxHr/ukuk5Ljhu5mvwBY7A==,type:str]
+SEARXNG_NFS_PATH: ENC[AES256_GCM,data:zbMD4U6boh8P5kkRHXuVB87hMpAHE0kD,iv:INymSM0EEWoBo6lbXin6ZkL9YXUdmIIlvlAPY48gm5E=,tag:e9UqtoCnem7/Ryaje7/lfQ==,type:str]
+#ENC[AES256_GCM,data:Sq4zICmj254A9MR6ReOrwMw=,iv:Ig8jc2EvtfxQTtOVe1hBOq6PFl45v/IxKe43jD4xl0M=,tag:dEuLDmEjbE922ZoPr0Nc5g==,type:comment]
+METUBE_NFS_PATH: ENC[AES256_GCM,data:XhojMOqFZ13KumAGl7LlfXiSq+D4cIwvw78=,iv:dU99GH4qji98BXAGe9TN2Mw/nhx0ohCOBuUL7VHgmx8=,tag:XqjUr2+veZ2Wp4yeFQB+tQ==,type:str]
+VIMINARIACOM_NFS_PATH: ENC[AES256_GCM,data:BKbZOMlCal8ypIpIv8vXRkfLLvGDYGkSUjzNNSAaS1vOBpxrcG31,iv:pmofNwWzyVUkMagwEt7XsM+smp3iSEEAJjA20VD7gQ8=,tag:1VPLxiBnQ808AvAmPc4tAQ==,type:str]
+OZRATES_NFS_PATH: ENC[AES256_GCM,data:sjvhlVyrE6w+hZJ8c8K9OxQ2XxBShr+CCxwKaf4=,iv:OceihUHrDC4GO7ynmqA5/h2cvPVUGRlwEGiOFYo83bs=,tag:8JUUR6t4/7EYaBroHT3OKw==,type:str]
+FRIGATE_NFS_PATH: ENC[AES256_GCM,data:KTNjB5SfDe/jzinVxi4LHM74OItQVa4=,iv:FWgz2O9yPNwN7SwKBcdjrw66m78Zbc4EYQs3wEkBgLY=,tag:W5PXT0SRjS1jg5vSBwxOhg==,type:str]
+#ENC[AES256_GCM,data:ICQ2pl8H4qeW7rQkNhSN6QF7KPvL2u13hHuAWgT1gKPKqY1+RQnv1FvqlCXeOlZKooY5XoectjA=,iv:7/WvfQg+qKoFFVrkYUYsCsPZYUqE7cpYipbpkjMLLDk=,tag:TWqDPylW4RH0Tsngi1YpIw==,type:comment]
+#ENC[AES256_GCM,data:uZUsfy24MRLz9DW0ynsyisGpQLuBy2tY5w==,iv:T0E3pTweP0tOwCe543hdV/8JV4fewHYpWcDGgcAkP0Q=,tag:QSRiPmkyUh2/+8+mInkDyQ==,type:comment]
+#ENC[AES256_GCM,data:B2f1Dl9M3XEnkTQzDjuXz0Uhxw06V7SbPvPB7EHrQsvMdV/bB+PLd86srIxvK9UMMQ6elrRpPeSi6EndHwVBh/sv3MtvXUBVvBAGWlI=,iv:cG0o7+bYZIrWvdAjpZlapPOc/B/mHz5wJFlhvMrYZZQ=,tag:XASpcVcf2O/WgZfcfhQckA==,type:comment]
+GITHUB_REPOSITORY: ENC[AES256_GCM,data:6vhg+4d5uDyooNELJ8BudkqB2bLHqSa/SiD67EyHD0f8hRmlUcilh2Us0A==,iv:+ppGpwTL8hy4jouNTcQHrryByRsd5wUeYVDBm76sCsQ=,tag:qlr7PRgxJm4XOXIL5kQKng==,type:str]
+#ENC[AES256_GCM,data:kw7cEEo+c5Pi97Hb9dPoXE19S4OgWHNip1NmbpfjkQWfwWyc3pAKizSh2fbzzbwk5drTdjNW2El98l/ynmiXVa2KZCAjeXE=,iv:09Bt1T3Tlrs2Lry7j79HohKZVRdMlCQNMtY/n1FEZIA=,tag:a/1qzwDzeMmTIZ0xGiSDqQ==,type:comment]
+#ENC[AES256_GCM,data:pGAnXw+MwcRDAciVf2ACIb7HtteYNgQTmDRP850T61krIwqjq20SI7G5ouwOurwtr49iQOdF,iv:aJjY5CYMWjk+A3fOpyt+pftVmNlalshZAHKCD52udtA=,tag:mEW34RxFaMLgF3zJGkuj8g==,type:comment]
+#ENC[AES256_GCM,data:ZKZjCh3FtD22k71lT1ZR/2OsrBYe4qVvXFv8beuc0/OIiSg=,iv:PVfZWNZm+7QKPS17PBxDwjSMxh6jgfwJT+WTiEcU3wk=,tag:enKfI5pEMEFQmFOPGdEzNw==,type:comment]
+#ENC[AES256_GCM,data:chr/X/TMTW/uF4s9+LjKjvDHME7zqJxv7EvCs+M8iPACBJCFCDHn,iv:J83dMutCQmbsGvt92Ib4g/6EW9rnjRXAOv1rX3wb3wA=,tag:bdzQUld3xY70xuzGU1/Q6Q==,type:comment]
+#ENC[AES256_GCM,data:wSwfLTauItpMcUVaP54=,iv:+FW+m0RQhyXzUSB6xtQFZCaTD5/IwkxM7VXPecHNCh4=,tag:xif3IY5BHy2dyyEI5MpGEA==,type:comment]
+PODNET: ENC[AES256_GCM,data:kdIWoxQHELEJxpqRGg==,iv:YRsz4wko3X4GegZd2fr3PvDgH9YYhoib/SpJVqwSgtA=,tag:HaFcDI7sgCCAV16OMPItvA==,type:str]
+SVCNET: ENC[AES256_GCM,data:cuG/3stFfinaphjLVg==,iv:afZ1lI2QyhZNiuOrMyS+iC6TCPuZaw7QdsgokQHaaRQ=,tag:gV5d0SNUXu/mAS1IgMaubQ==,type:str]
 sops:
     shamir_threshold: 3
     age:
         - recipient: age1mfegtkhyz3p4um3uy0v66l5fwjpsflnhu85l7atjs6n6sr3nl9asfqx0mg
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA3RzAxUHVTeEk2SkVNYmdZ
-            Nlc2YmRHRDlUekNQV2oyK3ZmQUV1TWJFMkRBCitHemxZUFRsT3NuZktONGxwTTVz
-            SlQwbGx3c1hDaldQcDBDZk5pOVdrdVkKLS0tIHZlUUdBMGtGN1RDRGJrS2RHR05v
-            MzB2alhXVW1oeTlvN0Y2VVJTR3dwN0EK/wEZEdirAdumulCd9EXaHbs3iH0/Mv7G
-            LvgYFarPse8nU4/QGVGGNFVst6hl3QKsmMXK0DD4ZTkJqZgUfXTYfA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA4aFlodmxnYkpHVkdYSnpE
+            Q1Z2QWIxV2pYVTlBRGxiYld4bHBrbjNRN1RnCkM4cTMvNGtzN0N3OGVBMXJwZ1By
+            aCsrQTc0TXR4OFBYR29ucE1lT0lDZU0KLS0tIGRyWlI2VEthWHRpY096TGE0R1o3
+            NzVHKzhJR0tnbWxaa2tkSGF0NithVWcKKcYxuVPURkXLoeU5Jf68M1JcORtBATur
+            6eUInHsVHUNRIwaHCW1othjTi8+siR7/oF76jdWuAryMhAV3vFKLvw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2026-01-25T21:19:33Z"
-    mac: ENC[AES256_GCM,data:0hwKrEXtk3UEkv946EJcYLyiXP8c3uFUrP7BsiZiCBZksgK5jfKSdZ3qFmv268vvCj/1FekITgZ21DID50t8fJFpfqiUmoXGn202HFT8ra2/YAdykt8y9bPtifoup9jLMMRSd4ZXlArPE1mNj5ANWaSAV8w9I1EcTpA3xgOHOSo=,iv:SY51mTJwTvhQPKWLSRDSJskK6UoLOUvt9doSeupHWJg=,tag:3t0dTpQG4rjLmUUc+VLX+Q==,type:str]
+    lastmodified: "2026-01-28T20:49:51Z"
+    mac: ENC[AES256_GCM,data:jIWZRZ6eXk7mt+RtR6I1v1GiDQWomI8Aesbxw6C5tY6XDEddT61+TSCKOvo/PaQqvd8U1AsVGro+Cn8NBomKG+p6ZbyrMePQmnVM2b1StxUhp+TfrNHyRIn1J4sODDyu1wR0FJEf+uKX7K+2x0GRklRg5g4fjrpRfkBqzdkH6v4=,iv:KKPg7ZF9lyC4EZLTNzw/yTksCNm2sjboVAtdQPPqr2M=,tag:nzZcqfeojOhwI9Wq2advIw==,type:str]
     version: 3.10.2
