--- a/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
@@ -4,70 +4,71 @@ metadata:
     name: cluster-config
     namespace: flux-system
 data:
-    #ENC[AES256_GCM,data:w02UJuulGdaPYcQZ,iv:HsYHy+O6iagB6QeCqkIKAerocIs2eVHkABhQslhCHnk=,tag:b+cLq94hT775PHzxpRy9gA==,type:comment]
-    PROXMOX_IP: ENC[AES256_GCM,data:vgk+rRKntV1lo1I=,iv:nId5C3rSJGCJnDl0o+/Nma9W+5QOKvmvbR6fkdCHga4=,tag:OxaR7CiETwVGkApAISczpA==,type:str]
-    VIP: ENC[AES256_GCM,data:L78xR6YVbIGpyUY=,iv:lKU2tdOkEcKT2kS6TZ3aVu7S0UcjtBQigAZOAvY5oFY=,tag:OBiShCzhDbnZ/Wi8AZ3ghA==,type:str]
-    MASTER1IP: ENC[AES256_GCM,data:OkFHKx2IN4mcsOY=,iv:wlGqxA4NvKgYjvyQSQ8itjBu4moJx3Fx+92ZP9evtJQ=,tag:n9ZR2fSeh20HEt0hDXNU5A==,type:str]
-    GATEWAY: ENC[AES256_GCM,data:R8awA+Hi/xYcEg==,iv:VJmfE0Lwsw8/4OBpEZRrX9U9O2f5roOGFhMDaIsozyU=,tag:JilShtkOVE0g0+RjQuinsw==,type:str]
-    #ENC[AES256_GCM,data:JSwQHT6CwgqyqJI0j73n,iv:nR8B683H2yoqHUBQUf3iM0e7fwgWtx9hCtaaAob5U/A=,tag:AxHUC8Tfi0nYEDV8kRlKpQ==,type:comment]
-    METALLB_RANGE: ENC[AES256_GCM,data:nLwLKBDdaqFz0Ku54QJ0TpZ8XyQmcEjooA==,iv:1C6MuNVM0G3fW9IWgUY3RWz509e4U/CZ42PW2H1iwh8=,tag:arOGCWbd2pKOIg/0Qj7GUw==,type:str]
-    #ENC[AES256_GCM,data:vO4oIkgva6IiBXANv0+kYhT1Pq3fq9aboQ==,iv:2vUtF6wKZHQ48+2uZEqyld0m2ueL147bQPOkAjC8tLM=,tag:tz7pHJ8Mzurx20V+iqRX6g==,type:comment]
-    NGINX_INTERNAL_IP: ENC[AES256_GCM,data:09RcLljHx179kiaR,iv:slGBeiV6YFoBpRli+2fJjNX/+IbYuB07RFnq7E1awP4=,tag:47wcKQoqDuPJ+FL+T/VHpQ==,type:str]
-    NGINX_EXTERNAL_IP: ENC[AES256_GCM,data:a139E1YpAtbNuGgp,iv:FxZqq0OKcVL/haMQ0MGlnaxWSfr51NBB94dRry+rMh8=,tag:CabxH/Ue0uuN0ppxPaAEMQ==,type:str]
-    IP_WHITELIST: ENC[AES256_GCM,data:vZkV5mRFG/7XtgHfHiJmya+STdY1Hg0MJkA=,iv:RRJnsDSOEkU2Z5e9BlU+CW1Kd/60Y95NisIc8xdLYdA=,tag:ijuBdahtxi5E93MjSe/71w==,type:str]
-    BLOCKY_IP: ENC[AES256_GCM,data:sKSebNP+appuzZJV,iv:t6RsE4nO54nSnIdyfdOb3kvc4AZdQPyi6CbzxXGpdyw=,tag:Xs22DXT0IZtNRqFdfctCIg==,type:str]
-    DASHBOARD_IP: ENC[AES256_GCM,data:UiY74N3FvUDnPLIu,iv:5wnwgBblGPOinVMcxONSJ27cFjhtyzOzbLEcT2BQeo4=,tag:/p0Yleyr8o9Y66qMBzTNdA==,type:str]
-    WG_EASY_IP: ENC[AES256_GCM,data:M6qGiiTtJ1Z3wimN,iv:B4eALRbmYxv0qmdwF91iXPsBqJr5zJvp2k4ShgP1HFU=,tag:SJzxksW4d1+rPnhEimOYdA==,type:str]
-    MINECRAFT_IP: ENC[AES256_GCM,data:zI0HNR9AWHD1R0TM,iv:45k6Z84uxYosa0MmcmcncnJfpZmxgApcJUSoLKPjOOo=,tag:xc9BICcar/XwvX00gzMp6Q==,type:str]
-    #ENC[AES256_GCM,data:tVj05yJsORtT/5UbHjq5n9tN,iv:1S7moBy4k3HQzUQ2T6F2aGJy5QHHqoiAwJ6p3KJhC3Y=,tag:TGG5v+HEXnrtd/hOnev5Hg==,type:comment]
-    BOREALIS_IP: ENC[AES256_GCM,data:astZ6p6ppYL/Xdw=,iv:0QOd+w03HvGQlNXfNImqkT7WWgPqOzJGGMVf8bQf1AE=,tag:TrcNAy/x4EJqJDPd64OhuQ==,type:str]
-    #ENC[AES256_GCM,data:mfzEJDL9vs8Kw7PmM0JOIw==,iv:LdbfztB94JWtqi6PRJjEr65miG3RO7sam5sjzIVZVYE=,tag:f3LRRW4WUG7+ckCokN333A==,type:comment]
-    DOMAIN_0: ENC[AES256_GCM,data:tZGGMfphmVVVsuwTKQ==,iv:DOxn0XFElBqYBRaIluc+H2dTpsihs/p6l8Zz4rGAcvY=,tag:scIWU1ROcMZOs/nFDGZh2g==,type:str]
-    DDNS_URL: ENC[AES256_GCM,data:7l34iRLkwl1Mq0e7Vrn1yEEdBCk=,iv:QSWtCXedYlqasdIC1rQvRcf2ECHoHtcdyGXJ+CU70b4=,tag:t4BMS5MhloNzj66COfrADg==,type:str]
-    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:Nr0I8Y5/HHDz497SvX1+uN9b9Q==,iv:u0Cgtu1CYl1XqAtShVML0vhfYSUKgSCGd+j56NE0jvs=,tag:FN4SheR4bJsZhHWxVykxoQ==,type:str]
-    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:yYFoeYt5tKoCGHQcLC9mgL3RhasvA1uGxtbN9t9dayYSYvUPVnN7Zg==,iv:vKRvh5EdQkkwriFOI+nEOygQwQXn2lw+is6EC9z9fus=,tag:P7JqVHSUHxAKZuJhSXHlWA==,type:str]
-    ZONE_ID: ENC[AES256_GCM,data:xDEOBvfYUkagfg2v37FEgiyZelOaV62GhxUtdixj1as=,iv:bvN7XXim2xWAvTlUuoAsBQEHC7p227wqZ7G0dwt8oRI=,tag:mYhAWwcadRlmigMp1ZiBDw==,type:str]
-    #ENC[AES256_GCM,data:Eso7gcNMAuI=,iv:ffGW5tBPfFz6GP2kSUc08RU8FmD6Vej3MOFeGjHDWGg=,tag:lNYZwcwPqaz807ELSlNkug==,type:comment]
-    GF_ADMIN: ENC[AES256_GCM,data:BrKs6sjVYa/m,iv:rp91BMPEjXtZ2cuFCqlmI84pvWh/fGFSbzxeS5BCoc8=,tag:b06BHH3dJFRYzR5YrZ9Cvg==,type:str]
-    GF_PWD: ENC[AES256_GCM,data:q6dkWZ1usZPUwAiX9gQs0YIai8DWmw01,iv:9egcl3tI8WslDZHSJDLN/MWVMFEq5T5UwkwFUsaGmnk=,tag:6L0q5432LqEhOx5slLo72g==,type:str]
-    #ENC[AES256_GCM,data:CinxmT1czqQlng==,iv:fCUaT8Yo7mLrjyz+j4Km3BhtIM2VomK3G37MD+8hQRg=,tag:Ppvnmb4pRbw1BzpTcIHadQ==,type:comment]
-    NEXTCLOUD_USER: ENC[AES256_GCM,data:fG87uOkejVUN,iv:9Wz88fWxwYnimIA2g/UbCqoB3/ceEVcHtlgKdiXQU+4=,tag:dsV49ydeNKmqchoTQQBfGQ==,type:str]
-    NEXTCLOUD_PASSWORD: ENC[AES256_GCM,data:+EEC1b1T5GquB12cte5IlJINSww=,iv:IVYjXxkSfSatuuPSFtb8R039mbwk+CQLv7biYUHktD4=,tag:PFfpLIjfXGXtMQBF0t1rGQ==,type:str]
-    NEXTCLOUD_NFS_PATH: ENC[AES256_GCM,data:Rx7soGd5B8sTo2+AV2PTFRLG1FwbZ6tK,iv:NbYD4/7NUyouYl6767M7AHuM5tuYv6/3vTSMpeMVywI=,tag:gWir5mtlkQG4xDxmOy6fvA==,type:str]
-    MINECRAFT_NFS_PATH: ENC[AES256_GCM,data:nKwSzZNBNWvExn/ELClmyTTt3A==,iv:QK7dJcEZPbyN0J3HPIbXO/0m+Y47VGoJ5luLFrgbmK4=,tag:8t9XS/QbSeYfT5PE8FlL0Q==,type:str]
-    SPOOLMAN_DATA_PATH: ENC[AES256_GCM,data:Gx3OVmek80M7o8rO8b5/Rb8h,iv:CPh+m5pTwPi9Gf1FNgpvgho7q4uB3RP1BTLliZS9QCA=,tag:1H5xJzrHTasUDpxXbD185w==,type:str]
-    SPOOLMAN_LOGS_PATH: ENC[AES256_GCM,data:Pw6dMeyyO5hC+MTF2ja+38V4/6lLAMo=,iv:ObYH4D8H/E+601hIWvHAlul0HVRLUYNgVWv3D0dkwbg=,tag:x6QipJL6MZoQ/+D081wQsg==,type:str]
-    HOMEASSISTANT_NFS_PATH: ENC[AES256_GCM,data:uzSvnNjYniiRIDCE5rZKT4CsrPoGbkeb,iv:WPhqoOmhohMn+/Uz/xvZ9RuAKtCT6LQ17I+AV3K/vqI=,tag:T6Q+lvi27nCZyTwq+/J4eg==,type:str]
-    SEARXNG_NFS_PATH: ENC[AES256_GCM,data:nCYxjRZ0JAe7xEjmmdCVSceLOlsa4jji,iv:faruqtHcRoRsshyq4sBa4MXsKzmJpb1AsQzUpY7nqvQ=,tag:spw1PJ4KgFOpEmJHpRcDTA==,type:str]
-    #ENC[AES256_GCM,data:+gA0axlduVTq8+fiaUsTmT0=,iv:jsWngqf4qUPuzGieSvjF3658bvBjBt2GwBeNFieI0BE=,tag:7mSRkb5RHgtTWMAgkOzZVA==,type:comment]
-    METUBE_NFS_PATH: ENC[AES256_GCM,data:NoKJrskGhiNyiRWAdAKcVqcTltSnXsP8yWk=,iv:1HQG7Y5zR9jGtc1Q3gy30w2oYxeUQbKwkfUXQt5pkOA=,tag:sE8mNB98fTTG6fUgQjWMSg==,type:str]
-    VIMINARIACOM_NFS_PATH: ENC[AES256_GCM,data:EWd+FS7uUbiDXj3wie07aZhftqtXsow62iTFAtiJiLe6uw6nva02,iv:GSZuCzCjFv9nhSWBEY8WJD2vysGLbU8MnFNDMbqnIXI=,tag:iiqtH6zxbyL+WDRWxJA/cw==,type:str]
-    OZRATES_NFS_PATH: ENC[AES256_GCM,data:hsNWqcc5W2Hpf8tFbL1Pbi94ZvI/gSCKHT0zLek=,iv:S5PdndbEo41kxCZJP8S09MOWFppqZTcYSDhLnnVuh7o=,tag:nRmreuissvKRULRodjmcZA==,type:str]
-    #ENC[AES256_GCM,data:oUrhZY5SYBlLA59CRQ2tWIJkqHzXsb3OEZxSrFM6L22/eqCtTob7JhuDJKCx3DHUUac05RIsnAI=,iv:7zaB6dJKweFxNASvCBC15JNTenAPDo8Fcslfv8XWtzA=,tag:oLunUvqGMrnaG0jbHl79SA==,type:comment]
-    #ENC[AES256_GCM,data:Jgh3SzFVVlS3MCejlctiuPDZH7cyzCGhLg==,iv:p4VCOooVgZiYq+HztwSCYj9g8oecsZe+kNai0tDpViQ=,tag:P2WxYwKzhspP/87556Sp5g==,type:comment]
-    #ENC[AES256_GCM,data:EbEH+H0qdGHTZ+7r2kjwlOa/0vUmaIoHFlBMzMsZjJ/n1b1ktJe9wfbld6hes30EVVgG2qe3fp8Nj8vqZFXnSz4H2EIIrH52SrpUKBA=,iv:AutxUKfedGnivwGB1/OvDvV5bzJ/YJywO1bxEoKx/pQ=,tag:hY4byKTx8ABRoM+1nMo+MA==,type:comment]
-    GITHUB_REPOSITORY: ENC[AES256_GCM,data:JUry7hQTN0WdR9hM588oNS4+Qq2UbDsy+xbyLktU1aNw26mcyuk4nf9Rtg==,iv:k5s1SMLCc/DQytAJe/3wMBpXDe7UITRjaB3sD2tfiTk=,tag:PjULBCLj4Td9M+33S6LE/Q==,type:str]
-    #ENC[AES256_GCM,data:WrKYCZiMnlVT6zs+D+4XKtzceh3DwcQMQNsLfmxvMLkPvGSkgnG1FLwQDSOz5FFjVf5k7+EhlbG/mkY9Z9qyLkfqk+Wzv/A=,iv:7u58w6C8TjAFaOSlan2jxSKOzorEeIVuUy12AR98EwE=,tag:fNr85PDNDTYxlMsIU88lLw==,type:comment]
-    #ENC[AES256_GCM,data:Ir2cZ8dwDAqrflX8xx5otd/f1mcgBsp1ZDSUIDtaBHXy81mIAvNmVgdMhtltR8q8kOIm1WUW,iv:/MNpZAhrQjVqkm1KFvJY5OIGsA3nXD/f+C4KzZtAlq4=,tag:jYUY4aRK1vxmVtTIB4Rc6g==,type:comment]
-    #ENC[AES256_GCM,data:pID4t27xXbErDh32CTVbsXjzvpN54nM/Zq8oswOiwKFv6Lc=,iv:RlsIiA1J6vEoYE85GIJTymrcQYF7GTPhubaRxt/ai+M=,tag:TLw9dupaJBlWXsFealmoYQ==,type:comment]
-    #ENC[AES256_GCM,data:lRZjp/sZbZWeYrihBoNGKaFfw/ooz6NOii4Yjns7SmpCwjcq4Q0W,iv:YbRAhahvxS8SYq+1D18NwH7CGVlCJ21WNPtDsVnh9PU=,tag:HnoN2LoDME/XIktgwaCEuw==,type:comment]
-    #ENC[AES256_GCM,data:B5ixTNuPeSH/FgjTRjs=,iv:/EpMWq9M6ySVox9jrJZyI3drb2kWxx+15oyq0AXbptQ=,tag:T6GpuVRwByeiVHHhRL9kOA==,type:comment]
-    PODNET: ENC[AES256_GCM,data:PFlqk5o37fpofXHMIQ==,iv:hl7PkRJJjlSSRDoosjxWL1WBOdJU+pWFNQVYTMUyGms=,tag:ZFqDTWGZjgr8SV9m9uQtag==,type:str]
-    SVCNET: ENC[AES256_GCM,data:mWBtAHJt9Qv+BIYn5g==,iv:fYVFSBh76CUp8ZrKa70LgQ1e9qc/GDpE5fKnQJE9n/o=,tag:d27gNkVrpdLnb9HRS37KWg==,type:str]
-    CLUSTERNAME: ENC[AES256_GCM,data:+5B1Uw==,iv:tne/hsuFRm81ImubGu1PX7Y7lprsuwdtbhsnHFk0xD0=,tag:e7QyMjQQy1YH+ZLjflG1MQ==,type:str]
+    #ENC[AES256_GCM,data:Pn1xVv9QL8wlissD,iv:59BTSdf9LEA9suqc5sT78AggZZTrYLEqi+UWCKF5zH8=,tag:F7NpEY1YefDpHYB87yGAcg==,type:comment]
+    PROXMOX_IP: ENC[AES256_GCM,data:tBRxNwNCntCkpMw=,iv:yWB0zHiVvuG8BtPOZC2Nsp1CZEqtUaXQIe6WyeHa0L8=,tag:2c4Kq4gJ4Roa0Cxtsf3BEA==,type:str]
+    VIP: ENC[AES256_GCM,data:KhzIbzMaNE+LG1w=,iv:GeZQDZfwnqh/UA2lx6ANy9SNslaoAnxmMWzZW7hT2K8=,tag:NxRgThd3sXzeSNTxPf0jOw==,type:str]
+    MASTER1IP: ENC[AES256_GCM,data:WWgS/BtZM9dT0R4=,iv:8tTG79z5H0XFpOELu+Lx2Q2dJImWvLlAyaujWwxyNwQ=,tag:5vx8T2w8k5dXzCx18T6O5g==,type:str]
+    GATEWAY: ENC[AES256_GCM,data:jNuJw9fOutRUAQ==,iv:FwFE/Un2/pLegyzYQS1N1V9GszNoeoaAigdXhfEeXrY=,tag:g4Tu+A0YQ8CMNd8nZJbzpQ==,type:str]
+    #ENC[AES256_GCM,data:8PbQaNs6a8y/KBsSKbOn,iv:Nq/mh3v6bAjmLEjumw8QORho1lM/wJWrpdNoMb8XFkc=,tag:0WaJ+Fq/tInb3PwADP/LYQ==,type:comment]
+    METALLB_RANGE: ENC[AES256_GCM,data:pimOFT6CCzZiaJEMVvqM5WCLwsWcUEu8ag==,iv:ufuOiP+pX9ZNFeZimDHt0WQd+sCkfCq4XnvuFyJE2ao=,tag:ZvXPoY9TMYIbcRQIfPRPNg==,type:str]
+    #ENC[AES256_GCM,data:HN5/hL1EBzJwXWMnpEr29DeRBGnPU/JpLQ==,iv:58wyByJpvn+RdY6xBi8tm/xRJ8ANjfzZgDNjnNcWLlQ=,tag:ckQ9Q3/qccoFZazzIsh/tw==,type:comment]
+    NGINX_INTERNAL_IP: ENC[AES256_GCM,data:Zt9h0Dc1hEixUghz,iv:WtCqLPhjWOFnnGwP0I5eIUFveuuJXnPL5LlC2G+cdoQ=,tag:jnTinkSNN2v5c6ztloVm5w==,type:str]
+    NGINX_EXTERNAL_IP: ENC[AES256_GCM,data:xJuSJbC1GhN/ZGi9,iv:yb/oFn4HDZxh3HFUumeq2I1o/5kF1fQM4VWpeRApSWE=,tag:gXIRV0AHXVvPz6NBzSlKdw==,type:str]
+    IP_WHITELIST: ENC[AES256_GCM,data:H7IHB3YPwRDJfF2bruKQA/wAV6RIwX4sRe4=,iv:pxW2DKsaLR32h4UJatLQ03U4I+qN74hWGi1DcURwmvo=,tag:c2BfzVjS9IZNJiY9EGX+eg==,type:str]
+    BLOCKY_IP: ENC[AES256_GCM,data:nUyAZGYtmTXzRaLc,iv:j4vECGpX7V6rYjcIaW5S39wSUI+tGCoxIYnC/Wm5mDQ=,tag:8XuQOEUoU0S/EbvrJ94CXQ==,type:str]
+    DASHBOARD_IP: ENC[AES256_GCM,data:TOuTgqZmgHf3m1l7,iv:W6Vemb82URDhuOcd/cMNVg1BvTMU3U+f4Uga8qlw2I0=,tag:1tWjXLjFozdzMbaWcbjPRA==,type:str]
+    WG_EASY_IP: ENC[AES256_GCM,data:Bm58w9FsCTwy2TX9,iv:dh3pYNsTyGNRhCVwL1c8mYoNXX7H9micdNrAR/asaow=,tag:Q4eDHDId/bsQiMFGBSChaQ==,type:str]
+    MINECRAFT_IP: ENC[AES256_GCM,data:3B0esGa9s3p41a3b,iv:+oZGevwTDJ//6yIJVuv1rmBWw+XdAA6rnjtEnEJh07s=,tag:X3LZUH1uWYkVtCj9U9AWrg==,type:str]
+    #ENC[AES256_GCM,data:MrV3q24NTGJ9T7S+bhzy2WdK,iv:cIIzddfjOvxbZDh4Yt0uECWgPTH1AUdmwr344838ghQ=,tag:xPzB7ne1cQmkeCrgYnqpuw==,type:comment]
+    BOREALIS_IP: ENC[AES256_GCM,data:bEgEUgYXBcWFYc8=,iv:niITSkhjf/P1kzyD79plQWPsOV4j0YR3FinqSot7IaQ=,tag:spFO1+2xJIQh4R4LmDG1SA==,type:str]
+    #ENC[AES256_GCM,data:zQoDyw9Ou/msPQDBZfo1kQ==,iv:mWsm9+y/tIzvvLUJtUTFqw7+LJ9bf2sgbNX/4dqzYlg=,tag:Y13G3+RXYX65wfWG3AJUKQ==,type:comment]
+    DOMAIN_0: ENC[AES256_GCM,data:+vQesMBamlekb8l4CA==,iv:cDehv0eGuYmlCI+wg4Hbnp2NhZ8klmcikIMeUOwgTBU=,tag:ZquKn7QdLpwX2Ccpk6EwRQ==,type:str]
+    DDNS_URL: ENC[AES256_GCM,data:eIhCyz7Cn3QZP8gGD4qh19iqNEo=,iv:zhKjvN3dNkNoNplKzsxfqXJon/sVyPjwAVjkp7y65kI=,tag:1qSDJLg+KaKThroP9KuGVQ==,type:str]
+    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:DdY6UIPlkuO2A3e2DT3lv7FouQ==,iv:fUZCkkuYg661yOZr72ke8+4mX0j3E+2UL5hA0SDgaVw=,tag:ONq8w1OdXb+FogQqeZrQYg==,type:str]
+    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:1tP9TA7KhDtvqhnkQH0H1H34jfwBhxHYPI8hNP7l2OjPpHDjGFQCDw==,iv:otP9837jR2Um3gk1ohxQt55BhKvgYlYl1UWtdQX+Cns=,tag:ZnW+FmVMeQiLWddOXp8Qkw==,type:str]
+    ZONE_ID: ENC[AES256_GCM,data:XZoOEv8SRRv6N955vmJ6sjsCAkdTN1x6AtxDBrLT6GI=,iv:6TzjwM2lns4TDmdtIP6/P9kFoY6Ogh93LYbdrhyzM6g=,tag:Niw05O+8Bg6SR1jODMgJyw==,type:str]
+    #ENC[AES256_GCM,data:7iYUNB5Nlms=,iv:XJIvSX9/WOP8FohEsac3g2jMT0hH+wZgC/9u6TTGBaw=,tag:rf51HMENLYBOgdkd5LyLiQ==,type:comment]
+    GF_ADMIN: ENC[AES256_GCM,data:/OQo6kIJ3Kjs,iv:0BMu4JU2quvpvoxO3hrfu+l7MCfb6UkdP4sLx0WD0Ro=,tag:PwjNdjUhn0znUXqnNDAQRA==,type:str]
+    GF_PWD: ENC[AES256_GCM,data:wBjMIViSfrnI7G5Kp4O56PITMgvNeX06,iv:YRXkZTcQ2E65kd/vy9V4ygq3f4MJwPNp7ZSVG627TBI=,tag:/XW1STaUmpv4i+xw88Fu9g==,type:str]
+    #ENC[AES256_GCM,data:9T4OgZeG6aoCzg==,iv:fFouQufRbNQRTQ+qBr6ZJSvBGj151OTinHqjRI2a25M=,tag:kA9C256TrxXevxsKKw+Swg==,type:comment]
+    NEXTCLOUD_USER: ENC[AES256_GCM,data:VkNoTyHTm/9x,iv:BQ2eHcN4GvxhT8t8f67OasgE3LXHskl6A5Pv7mBMELQ=,tag:i19zb5EsTV0kV87kyelmYw==,type:str]
+    NEXTCLOUD_PASSWORD: ENC[AES256_GCM,data:7KK3z/N9ZdiyLjqvyxGp9CaqLYg=,iv:pDlQz5i7Vjf/7rC/oSxXL85yrkGAhJ88GDmRaokOU90=,tag:OXnITHCVeOtXMOuyTL/9/Q==,type:str]
+    NEXTCLOUD_NFS_PATH: ENC[AES256_GCM,data:1e0NP4GqikWF7Jc1xCkmckF5n6bL1B0g,iv:J2h+Ha5jOqeE1OfMvnjgt6Xq4WP81f4XO+yHH10p4j0=,tag:W+4aZwIgWVg6wg7TD8PiqQ==,type:str]
+    MINECRAFT_NFS_PATH: ENC[AES256_GCM,data:nXBQNNrXeRx3vAqPU81aacyMNg==,iv:VL7TqGv8VXVDBYlmvzoqV0QUAwWDJUOLfC70aMn7D/s=,tag:ERn4Cy2pxnhFesv73tXnjw==,type:str]
+    SPOOLMAN_DATA_PATH: ENC[AES256_GCM,data:N7zH21fEnxwzZYYf9M3p9nvY,iv:WpjAUO7pdJN8tju8cyNaYRhUQIRuVHvp8jsiYOu1Z5g=,tag:zg2q4+Z2QavSwnOp9Wdtag==,type:str]
+    SPOOLMAN_LOGS_PATH: ENC[AES256_GCM,data:2ExjpQe1tql85zFAQIfAsuDtfTIsFeY=,iv:sCMzGMc+9wV//wIN1Bjhjn3yGLcrRFNfFxtOi+URQwk=,tag:7LM0ymZh7PVF2geHmgIxJw==,type:str]
+    HOMEASSISTANT_NFS_PATH: ENC[AES256_GCM,data:fJ56qE5ai+h2fcnPqql6z97H0/1J9NkR,iv:EPtUJhw+oQ/iHvMBGgIS2YweX8oFMEfgCl3DgPcw9io=,tag:dUKgk2GMur+Jm8BcNiHPpw==,type:str]
+    SEARXNG_NFS_PATH: ENC[AES256_GCM,data:4vtYAXQFTdFU5OWtFTHKlLhs8do2hEwh,iv:TTzUoL4pai6v5jOppL27eWyBlsCbspM5/BxHDKkEQuA=,tag:pGMTZibrADkYvnaQ/lUmbw==,type:str]
+    #ENC[AES256_GCM,data:p8wjmsz2tyOj4DAwTzt4w5U=,iv:YbZMsLyHVmOKjyFGHQUTjwjmHh8jT/5EqcEYuBM4Boc=,tag:U38azUOLf8LxfdrqqOI1EQ==,type:comment]
+    METUBE_NFS_PATH: ENC[AES256_GCM,data:dyGLDQwqzmNK0nYbB0GmVnfNmNT8bYIUviU=,iv:FgbCTATZSq/u987DS5tfU4qSN1LIp1ZS8vgKedPFAo8=,tag:LVJ1Ad4Tp10kCP+p7MwfAw==,type:str]
+    VIMINARIACOM_NFS_PATH: ENC[AES256_GCM,data:voFe4tDSN7jQGEW1qmZYA59ApfofA1ds4jmcjTXbmsZiqiObrgCH,iv:MMkUHEJIz1AINK8Nfup6t4Z1BUSt2Yscu55OHro4+Nw=,tag:VY+Vt9SnHHyKht/jpL4TQw==,type:str]
+    OZRATES_NFS_PATH: ENC[AES256_GCM,data:ZdEQwWfJeeFiTdWowvzwVCxaZMqP0MRVWYLuGHY=,iv:Ks4iDs5VcjUhTRFqIczjMaxHopEHWR7j48rXCijcKBA=,tag:s8slCrcA+/OWnsGAGtc4CQ==,type:str]
+    FRIGATE_NFS_PATH: ENC[AES256_GCM,data:d7XX205iq9btWhynOA6krPGgnfe9xyQ=,iv:gHDR1gOr5SdJFQV/8knSfchDOpfuikw0+LG6VOvsbDw=,tag:tIkvxQZjgGrXUuSNtjwgmg==,type:str]
+    #ENC[AES256_GCM,data:a7pCb4rti1wf5xwQVu6nWNH85XIA0wqLgHeui3IMMLpRmW++UWKUVj/6gl7I/uDdZ28ElqdLp5M=,iv:nbFUnwi98uhktj+rkw4TDZoa1BCRk1SKyXvVbwRQ/Mo=,tag:J1XNqZUxb5dBDWODgIIFbg==,type:comment]
+    #ENC[AES256_GCM,data:r8HVn+gaxQIYx54Y6+YWUehJk7PmgdTjuw==,iv:/NQqE9gKSn1HqARbFpBjMZxXro8kKTVOSzxwURHvsYA=,tag:NH+9IdNhCjVaEIHhoo37fQ==,type:comment]
+    #ENC[AES256_GCM,data:CjUSVuIuGPNOcgg4tieIYpX8a32gKGeA1m/Oj9ignfPRzMZfJkEUGM2to7C7F4WGdoCLIkXvvoypVeWw1WxQIIpq7uP5BG8YiEs+OAY=,iv:8DjJzLqVXOcy6tgkER78WYuLn0uMT6rgNlf61jWEPOk=,tag:cUYMwP8EVgAakReboaUo6A==,type:comment]
+    GITHUB_REPOSITORY: ENC[AES256_GCM,data:L4hNPImuOyK6BOXJQlBAfUXB+IEuJh33C84nWlkEjcx1A8VMiDQUaz/KkA==,iv:2nv2bBMLoB2aD21W1G7okaEeyCB7UJZ0BBB3FX2lZO0=,tag:hcgu70eaOET7x0GeAGknAw==,type:str]
+    #ENC[AES256_GCM,data:nVJEnDlfXpck50xpzz8OyoozlX3ihUFlqMjgZMkBJQ5wO3DRJkAZgy6xGJ7Sumrn7pbQIXQukcqB4kricFZFvdPesYqsBVg=,iv:r9945kX0ZBbGzuc8HbMpHaUVv2LxXD1JtegaeXv1UOk=,tag:Gacak2lIrRMeBZ4i2o062Q==,type:comment]
+    #ENC[AES256_GCM,data:3aLbobr8zVqoIQiMH3YxMH1g1MDuBTD9gg5nct0Lv4TIfOKFTUOuDkVUbo/daCoyvQgvqq8Y,iv:7sj1mm0jUgZ8keo1nLDpBOKrdG3rB/vjzB2V+SbdYAk=,tag:ZJKkI1fPRC2iBcS9/tlW3A==,type:comment]
+    #ENC[AES256_GCM,data:SvKT25dsLUCnLU/vq7C6Hx3PM+8B+//xUIxYuYoh0agzGE0=,iv:KEGzsbhTB4xSibmGYNFA/z0gtH23B5kf6MsVjhtieB8=,tag:ZhbArtDI2bXUtgBmX3+J1Q==,type:comment]
+    #ENC[AES256_GCM,data:D4ZdnFev0bbhnCvNp13w5zJ1FkbGtWe1nTlcacJ8EN0yDvMTnvRj,iv:ghoc0ejlaSpmDtjxI429UjUQIaYZ9qXHmdT5yEqpCuE=,tag:1FqnffFKQ5zRUjjTt6/Wyg==,type:comment]
+    #ENC[AES256_GCM,data:Kmm6ffohVLCer6MzTFo=,iv:YQWfYmFcRXDLW0nf0qfZ0SiS7VvU5vrZNhkkvJ2NwB4=,tag:HVZ07gYag27joG4CuSNFMg==,type:comment]
+    PODNET: ENC[AES256_GCM,data:Z5uoaxZeQhlASHcvEA==,iv:/lomaRMk27kTNpd8DCtC9dvaGZfDv7GUrbY/FXbmatE=,tag:h4FPnsjsYc3zGZXIEqMQjw==,type:str]
+    SVCNET: ENC[AES256_GCM,data:dPcNQXvlFJ0Zg2NFiQ==,iv:acIFgAhZLl2fXIaOTOIrSFxy5j6xHox6GL/TyFPo3mY=,tag:VjwrrDU65pLUxegZumCvaw==,type:str]
+    CLUSTERNAME: ENC[AES256_GCM,data:iFX/AQ==,iv:uuLg/aStkbCqr/ee1sQpVEMv21llwgY5zcm0k+M0tqY=,tag:SF4vtLhIuWaOHWuRBITtdw==,type:str]
 sops:
     shamir_threshold: 3
     age:
         - recipient: age1mfegtkhyz3p4um3uy0v66l5fwjpsflnhu85l7atjs6n6sr3nl9asfqx0mg
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBCV0xPUnRrWE5Cc0V1Wk16
-            ZXZKQ3pHUjRlWG5OWDVPeVZsdVJyVEZ3bTJJCmNTRVhEbHZKSXJQY1JLV0NBM3BP
-            cE5JUzdDL1Jwd2JJNW92WW1tVFkyckkKLS0tIEVQaUptV0VJS21SUHFKbDVVZkk2
-            TlB0Zjl3M1J5bVA5VnFRTGpoTlk5ZHcKfXPYA7BWsUnPX64tvEtgUSDiRZrjVouT
-            w7CaQokfsmyLO+IHUhNfPpAqLbjbhtKMzFRxIkM/ABY3c6lK64beGw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBKTkE5NFZLRnJhUDNBaTF1
+            VWVVR0NlS3BjeEZtOWNQVTRRbVFIZ1ROaWhzCjF1N3J0aVBlcUZyT0UwbjFHNVNW
+            YXo1UjBTb3M5NnlWNWNBUmZNeTdXK0EKLS0tIEM4M1hFRDlFK2Q5N2p5c1dZYmxT
+            MnpkSitDd0hKS0pDc1ovbi9ScFBqT1EKmN6FPLV9eR2bgKR5eGjH8KDbc6vy0bIc
+            JnXch4o65rW+qbvWZr3zEvuO0Lpzj3kqszRG1ZQrny37QWBXxuz5Mw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2026-01-25T21:19:33Z"
-    mac: ENC[AES256_GCM,data:eWgQiDnNFJ2UziesCCOTcJ2ysRYJPUozBaT0K4JtkqK6uGqjbsLti9BNEj/rph3LFN8MWP6rLVNGt2L7n0UxMevQ0GrqmmEhzhzqFDB92ANzTB5tTJVOV1aMifjtBUfo62sSZvprNBmvwCphfhyUuYS/pLfRAJgCkDA873KcV8w=,iv:m6hXNd8cdjINdeYYRlPc1ITF6BYqRYdgtUsk/ak+zrg=,tag:v2Cot2QhKOfBB/a66No5EQ==,type:str]
+    lastmodified: "2026-01-28T20:49:51Z"
+    mac: ENC[AES256_GCM,data:R8ur2TSpYCU/RMZvGdFVfWm8WJ1abrkiT9FtszjrCVFU9kU3UcVgqT/CrCvK8tgZV3IHSwzdKoQClgsPUvIvixFCyF6PdJPZwWr2fdqA9geuqiTqR/ZDVDDPUGd2C66s5kUI5CwqXd356DDe9Lx4k5tnXMK3oBnnb/J+LFIY120=,iv:ZoZzqBKe9Wi3gaFoDgxjw5y/AZADp/N+9vZmvCTqZLk=,tag:HgQz6A3eWOzZ6DWInIt/Cg==,type:str]
     encrypted_regex: ((?i)(displayname|email|pass|ca|id|bootstraptoken|secretboxencryptionsecret|secrets|secrets|password|cert|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.10.2
